# pyfinalo

./: .dockerignore  .editorconfig  BUILD.md  LICENSE  Makefile  README.md  dune-project  pyfinalo.opam
.github/workflows/: check-generated-files.yml  ci.yml  claude.yml  deploy-webapp.yml  hygiene.yml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.multistage  build-dev.sh  build-multistage.sh  build.sh  test-multistage.sh
scripts/: .gitignore  audit.ts  check-dev-containers-cleaned.sh  package.json
src/bin_pyfinalo_py/: bin_pyfinalo_py.ml  dune
src/bin_pyfinalo_py/test/: basic.t  dune  suite1.py
src/lib_pyfinalo/: dune  interp.ml  lang.ml
src/lib_pyfinalo/test/: dune  lib_pyfinalo_unit_tests.ml
src/lib_pyfinalo_js/: README.md  dune  lib_pyfinalo_js.ml  package.json  tsup.config.ts  tsup.stage1.config.ts  wrapper.js
src/lib_pyfinalo_js/test/: pyfinalo.test.ts
webapp/: .gitignore  DEPLOYMENT.md  README.md  package.json  playwright.config.ts
webapp/app/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
webapp/app/public/: mock-bundles.js
webapp/app/src/: App.css  App.tsx  index.css
webapp/pyodide-setup/: README.md  requirements.txt
webapp/repl-js/: package.json  tsconfig.json  tsup.config.ts  vite.config.ts
webapp/repl-js/src/: index.ts
webapp/repl-python/: package.json  tsconfig.json  tsup.config.ts  vite.config.ts
webapp/repl-python/src/: index.ts
webapp/scripts/: deploy.sh  download-r2-assets.sh  r2-management.md  upload-r2-assets.sh
webapp/tests/: repl.spec.ts
webapp/worker/: package.json  wrangler.toml
(+17 files in other folders)
